--- a/ask_her_out.html
+++ b/ask_her_out.html
@@ -2,57 +2,134 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Just One Question</title>
+    <title>Will You Be My Oxytocin Receptor Gene?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #ffeef5;
+            font-family: "Poppins", Arial, sans-serif;
+            background: #e6f2ff; 
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
         }
+
         .box {
-            background: white;
-            width: 350px;
-            padding: 25px;
-            border-radius: 15px;
+            background: #ffffff;
+            width: 360px;
+            padding: 26px 24px;
+            border-radius: 18px;
             text-align: center;
-            box-shadow: 0 0 20px rgba(0,0,0,0.15);
+            box-shadow: 0 12px 30px rgba(15, 23, 42, 0.18);
         }
+
+        .decor-top {
+            font-size: 28px;
+            margin-bottom: 10px;
+            color: #ff4d6a;
+        }
+
+        h2 {
+            font-family: "Playfair Display", serif;
+            margin: 0 0 8px 0;
+            font-size: 1.55rem;
+            color: #0f172a;
+        }
+
+        p {
+            margin: 0 0 16px 0;
+            font-size: 0.95rem;
+            color: #4b5563;
+        }
+
         button {
-            padding: 10px 18px;
+            padding: 10px 20px;
             border-radius: 25px;
             border: none;
             cursor: pointer;
-            margin: 10px;
-            font-weight: bold;
+            margin: 8px;
+            font-weight: 600;
+            font-size: 0.95rem;
+            transition: transform 0.15s ease-out, box-shadow 0.15s ease-out;
         }
+
         #yesBtn {
-            background: #ff4d6a;
+            background: #2563eb;
             color: white;
+            box-shadow: 0 8px 20px rgba(37, 99, 235, 0.55);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 6px;
         }
+
+        #yesBtn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 12px 26px rgba(37, 99, 235, 0.65);
+        }
+
         #noBtn {
-            background: #ddd;
-            color: #333;
+            background: #e5e7eb;
+            color: #374151;
             position: relative;
+            transition: transform 0.18s ease-out;
         }
+
         #overlay {
             display: none;
             position: fixed;
-            left: 0; top: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.45);
+            inset: 0;
+            background: rgba(15, 23, 42, 0.55);
             justify-content: center;
             align-items: center;
+            padding: 18px;
         }
+
         .overlay-box {
-            background: white;
-            padding: 25px;
-            border-radius: 15px;
-            width: 300px;
+            background: #ffffff;
+            padding: 24px 22px;
+            border-radius: 16px;
+            width: 320px;
             text-align: center;
+            box-shadow: 0 14px 35px rgba(15, 23, 42, 0.35);
+        }
+
+        .overlay-box h3 {
+            font-family: "Playfair Display", serif;
+            margin: 0 0 10px 0;
+            color: #0f172a;
+        }
+
+        .overlay-box p {
+            margin: 0 0 18px 0;
+            color: #4b5563;
+        }
+
+        #goPlanBtn {
+            background: #2563eb;
+            color: white;
+            padding: 9px 18px;
+            border-radius: 22px;
+            cursor: pointer;
+            font-weight: 600;
+        }
+
+        #goPlanBtn:hover {
+            transform: translateY(-1px);
+            background: #1d4ed8;
+        }
+
+        .small-note {
+            font-size: 0.8rem;
+            color: #6b7280;
+            margin-top: 8px;
         }
     </style>
 </head>
@@ -60,39 +137,107 @@
 <body>
 
 <div class="box">
-    <h2>Will you go out with me?</h2>
-    <p>I have been waiting for this moment.</p>
 
-    <button id="yesBtn">Yes</button>
-    <button id="noBtn">No</button>
+    <div class="decor-top">❤️✨</div>
+
+    <h2>Will you be my oxytocin receptor gene?</h2>
+
+    <p>You make everything feel a little softer, a little sweeter, just by being you.</p>
+
+    <div id="buttonRow" style="position:relative; display:inline-block;">
+        <button id="yesBtn" type="button">❤️ Yes</button>
+        <button id="noBtn" type="button">No</button>
+    </div>
+
+    <div class="small-note">
+        I know it’s cheesy… but I really mean it.
+    </div>
 </div>
 
 <div id="overlay">
-    <div class="overlay-box">
-        <h3>You said yes</h3>
-        <p>You just made my day. Next, I will show you our little plan.</p>
-        <button id="goPlanBtn">See our plan</button>
+    <div class="overlay-box" role="dialog" aria-modal="true" aria-labelledby="overlayTitle">
+        <button id="closeOverlay" type="button" aria-label="Close" style="position:absolute;right:12px;top:10px;background:transparent;border:none;font-size:18px;cursor:pointer">✕</button>
+        <h3 id="overlayTitle">You said yes</h3>
+
+        <!-- UPDATED CUTE LINE -->
+        <p>I know you will say yes and I know you're missing me so much.</p>
+
+        <button id="goPlanBtn" type="button">Now let me show you the plan I made for us</button>
     </div>
 </div>
 
 <script>
-    var noBtn = document.getElementById("noBtn");
+    (function(){
+        var noBtn = document.getElementById("noBtn");
+        var box = document.querySelector('.box');
+        var overlay = document.getElementById('overlay');
+        var yesBtn = document.getElementById('yesBtn');
+        var goPlan = document.getElementById('goPlanBtn');
+        var closeOverlay = document.getElementById('closeOverlay');
+        var lastFocused = null;
 
-    // Use CSS transform to shift the button on hover so it "runs away" reliably
-    noBtn.addEventListener("mouseenter", function () {
-        var dx = Math.floor(Math.random() * 160 - 80); // random x offset
-        var dy = Math.floor(Math.random() * 80 - 40);  // random y offset
-        noBtn.style.transform = "translate(" + dx + "px, " + dy + "px)";
-    });
+        function clamp(v, a, b){ return Math.max(a, Math.min(b, v)); }
 
-    document.getElementById("yesBtn").onclick = function () {
-        document.getElementById("overlay").style.display = "flex";
-    };
+        // Move the No button to a random position constrained inside .box
+        noBtn.addEventListener('mouseenter', function (e) {
+            var boxRect = box.getBoundingClientRect();
+            var btnRect = noBtn.getBoundingClientRect();
 
-    document.getElementById("goPlanBtn").onclick = function () {
-        // `schedule.html` is at the project root; navigate there
-        window.location.href = "schedule.html";
-    };
+            // compute allowed translate ranges so the button stays fully inside the box
+            var minX = boxRect.left - btnRect.left + 8; // small padding
+            var maxX = boxRect.right - btnRect.right - 8;
+            var minY = boxRect.top - btnRect.top + 8;
+            var maxY = boxRect.bottom - btnRect.bottom - 8;
+
+            var dx = Math.floor(Math.random() * (maxX - minX + 1)) + minX;
+            var dy = Math.floor(Math.random() * (maxY - minY + 1)) + minY;
+
+            dx = clamp(dx, minX, maxX);
+            dy = clamp(dy, minY, maxY);
+
+            noBtn.style.transform = 'translate(' + dx + 'px, ' + dy + 'px)';
+        });
+
+        // Show overlay (and trap focus)
+        yesBtn.addEventListener('click', function(){
+            lastFocused = document.activeElement;
+            overlay.style.display = 'flex';
+            // focus first focusable element in overlay
+            setTimeout(function(){
+                var focusable = overlay.querySelectorAll('button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])');
+                if (focusable.length) focusable[0].focus();
+            }, 10);
+            document.body.style.overflow = 'hidden';
+        });
+
+        function closeDialog(){
+            overlay.style.display = 'none';
+            document.body.style.overflow = '';
+            if (lastFocused) try { lastFocused.focus(); } catch(e){}
+        }
+
+        closeOverlay.addEventListener('click', closeDialog);
+
+        // close on Escape and trap Tab inside overlay
+        overlay.addEventListener('keydown', function(e){
+            if (e.key === 'Escape') { closeDialog(); }
+            if (e.key === 'Tab') {
+                var focusable = Array.prototype.slice.call(overlay.querySelectorAll('button, [href], input, select, textarea, [tabindex]:not([tabindex="-1"])'));
+                if (!focusable.length) { e.preventDefault(); return; }
+                var idx = focusable.indexOf(document.activeElement);
+                if (e.shiftKey) {
+                    if (idx === 0) { focusable[focusable.length-1].focus(); e.preventDefault(); }
+                } else {
+                    if (idx === focusable.length-1) { focusable[0].focus(); e.preventDefault(); }
+                }
+            }
+        });
+
+        // clicking overlay background closes
+        overlay.addEventListener('click', function(e){ if (e.target === overlay) closeDialog(); });
+
+        goPlan.addEventListener('click', function(){ window.location.href = 'schedule.html'; });
+    })();
 </script>
 
 </body>
