--- a/ask_her_out.html
+++ b/ask_her_out.html
@@ -271,7 +271,7 @@
         // clicking overlay background closes
         overlay.addEventListener('click', function(e){ if (e.target === overlay) closeDialog(); });
 
-        goPlan.addEventListener('click', function(){ window.location.href = 'schedule.html'; });
+        goPlan.addEventListener('click', function(){ window.location.href = 'schedule.html?full=1'; });
     })();
 </script>
 
